# New GUI Elements module
option(TORQUE_BOL_META "Enable BOL Meta data Module" ON)

if (TORQUE_BOL_META)
  message("Enabling BOL Meta Data Module")

  file(GLOB TORQUE_BOL_META_DATA_SOURCES "Source/*.cpp")
  set(TORQUE_SOURCE_FILES ${TORQUE_SOURCE_FILES} ${TORQUE_BOL_META_DATA_SOURCES} PARENT_SCOPE)
  set(TORQUE_INCLUDE_DIRECTORIES ${TORQUE_INCLUDE_DIRECTORIES} "${CMAKE_CURRENT_SOURCE_DIR}/Source" PARENT_SCOPE)
endif(TORQUE_BOL_META)
